# deep-research-skill

./: .env.example  .gitignore  .gitmodules  CHANGELOG.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
eval/: README.md  build_benchmark_input.py  run_eval.py  trace_processing.py
eval/tests/: test_build_benchmark_input.py  test_run_eval.py  test_trace_processing.py
scripts/: convergence_check.py
skills/deep-research/: SKILL.md  drafter.md  editor.md  evaluator-prompt.md  evaluator.md  gatherer-prompt.md  gatherer.md  synthesizer.md  writer.md
skills/deep-research/references/: clarification.md  contracts.md
skills/deep-research/scripts/: convergence_check.py  validate_report.py
tests/: test_brief_fixture.py  test_convergence_check.py  test_directive_fixture.py
